--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lotus Boats</title>
+    <title>Lotus Bords</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand row-ver">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./images/lotus-flower.jpg" height="20" alt="Lotus Flower"> Lotus Boats</a>
+        <a class="navbar-brand" href="#"><img src="./images/lotus-flower.jpg" height="20" alt="Lotus Flower"> Lotus Boards</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
