--- a/about.html
+++ b/about.html
@@ -12,11 +12,20 @@
 
 <Body>
 
-    <nav class="navbar navbar-expand">
+    <nav class="navbar navbar-expand row-ver">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img src="./images/lotus-flower.jpg" height="20" alt="Lotus Flower"> Lotus Boats</a>
+          <a class="navbar-brand" href="#"><img src="./images/lotus-flower.jpg" height="20" alt="Lotus Flower"> Lotus Boards</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li>
+                <button class="btn btn-dark shadow" id="btnSwitch">Toggle Mode</button>
+              </li>
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <div class="container ms-5 mt-5">
         
@@ -35,5 +44,6 @@
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<script src="./java.js"></script>
+    
 </Body>
