--- a/gallery.html
+++ b/gallery.html
@@ -5,17 +5,26 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lotus Boats</title>
+    <title>Lotus Boards</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> 
 
 </head>
 
 <Body>
 
-    <nav class="navbar navbar-expand">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img src="./images/lotus-flower.jpg" height="20" alt="Lotus Flower"> Lotus Boats</a>
+   <nav class="navbar navbar-expand row-ver">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="./images/lotus-flower.jpg" height="20" alt="Lotus Flower"> Lotus Boards</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li>
+              <button class="btn btn-dark shadow" id="btnSwitch">Toggle Mode</button>
+            </li>
         </div>
+      </div>
     </nav>
 
     <div class="album py-5 bg-body-tertiary">
@@ -379,6 +388,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <script src="./java.js"></script>
 
 </Body>
